# tree-sitter-python

./: Cargo.toml  grammar.js  package-lock.json
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: final_dict.txt
